feat: Delete Course refs: AAF-24

--- a/FE-Framework1/src/app/Components/course/course.component.html
+++ b/FE-Framework1/src/app/Components/course/course.component.html
@@ -1,6 +1,6 @@
-<p>product-list works!</p>
+
 <div class="container-admin">
-    {{title}}
+   <h1> {{title}}</h1>
     <table class="table table-border">
         <thead>
             <tr>
