--- a/FE-Framework1/src/app/Layouts/admin-layout/admin-layout.component.html
+++ b/FE-Framework1/src/app/Layouts/admin-layout/admin-layout.component.html
@@ -14,95 +14,100 @@
 </div> -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="admin-layout.component.css">
-	<title>AdminSite</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="admin-layout.component.css">
+  <title>AdminSite</title>
 </head>
+
 <body>
-	
-	<!-- SIDEBAR -->
-	<section id="sidebar">
-		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> AdminSite</a>
-		<ul class="side-menu">
-			<li><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
-			<li class="divider" data-text="main">Main</li>
-			<li>
-				<a routerLink="course">
-                    <i class='bx bxs-inbox icon' ></i> Product Management <i class='bx bx-chevron-right icon-right' ></i>
-                </a>
-				<ul class="side-dropdown">
-					<li><a routerLink="course">Course</a></li>
-					<li><a routerLink="add">Add Course</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="#"><i class='bx bxs-widget icon' ></i> Manage categories <i class='bx bx-chevron-right icon-right' ></i></a>
-				<ul class="side-dropdown">
-					<li><a href="#">Basic</a></li>
-					<li><a href="#">Select</a></li>
-					<li><a href="#">Checkbox</a></li>
-					<li><a href="#">Radio</a></li>
-				</ul>
-			</li>
-		</ul>
-		<div class="ads">
-			<div class="wrapper">
-				<a href="#" class="btn-upgrade">Upgrade</a>
-				<p>Become a <span>PRO</span> member and enjoy <span>All Features</span></p>
-			</div>
-		</div>
-	</section>
-	<!-- SIDEBAR -->
 
-	<!-- NAVBAR -->
-	<section id="content">
-		<!-- NAVBAR -->
-		<nav>
-			<i class='bx bx-menu toggle-sidebar' ></i>
-			<form action="#">
-				<div class="form-group">
-					<input type="text" placeholder="Search...">
-					<i class='bx bx-search icon' ></i>
-				</div>
-			</form>
-			<a href="#" class="nav-link">
-				<i class='bx bxs-bell icon' ></i>
-				<span class="badge">5</span>
-			</a>
-			<a href="#" class="nav-link">
-				<i class='bx bxs-message-square-dots icon' ></i>
-				<span class="badge">8</span>
-			</a>
-			<span class="divider"></span>
-			<div class="profile">
-				<img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
-				<ul class="profile-link">
-					<li><a href="#"><i class='bx bxs-user-circle icon' ></i> Profile</a></li>
-					<li><a href="#"><i class='bx bxs-cog' ></i> Settings</a></li>
-					<li><a href="#"><i class='bx bxs-log-out-circle' ></i> Logout</a></li>
-				</ul>
-			</div>
-		</nav>
-		<!-- NAVBAR -->
+  <!-- SIDEBAR -->
+  <section id="sidebar">
+    <a href="#" class="brand"><i class='bx bxs-smile icon'></i> AdminSite</a>
+    <ul class="side-menu">
+      <li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i> Dashboard</a></li>
+      <li class="divider" data-text="main">Main</li>
+      <li>
+        <a routerLink="course">
+          <i class='bx bxs-inbox icon'></i> Product Management <i class='bx bx-chevron-right icon-right'></i>
+        </a>
+        <ul class="side-dropdown">
+          <li><a routerLink="course">Course</a></li>
+          <li><a routerLink="add">Add Course</a></li>
+        </ul>
+      </li>
+      <li>
+        <a routerLink="category"><i class='bx bxs-widget icon'></i> Manage categories <i
+            class='bx bx-chevron-right icon-right'></i></a>
+        <ul class="side-dropdown">
+          <!-- <li><a routerLink="category">Category</a></li>
+          <li><a routerLink="add">Add Category</a></li>
+          <li><a routerLink="edit">Edit Category</a></li> -->
+        </ul>
+      </li>
+    </ul>
+    <div class="ads">
+      <div class="wrapper">
+        <a href="#" class="btn-upgrade">Upgrade</a>
+        <p>Become a <span>PRO</span> member and enjoy <span>All Features</span></p>
+      </div>
+    </div>
+  </section>
+  <!-- SIDEBAR -->
 
-		<!-- MAIN -->
-		<main>
-			<h1 class="title">Dashboard</h1>
-			<ul class="breadcrumbs">
-				<li><a href="#">Home</a></li>
-				<li class="divider">/</li>
-				<li><a href="#" class="active">Dashboard</a></li>
-			</ul>
-			<router-outlet/>
-		</main>
-		<!-- MAIN -->
-	</section>
-	<!-- NAVBAR -->
+  <!-- NAVBAR -->
+  <section id="content">
+    <!-- NAVBAR -->
+    <nav>
+      <i class='bx bx-menu toggle-sidebar'></i>
+      <form action="#">
+        <div class="form-group">
+          <input type="text" placeholder="Search...">
+          <i class='bx bx-search icon'></i>
+        </div>
+      </form>
+      <a href="#" class="nav-link">
+        <i class='bx bxs-bell icon'></i>
+        <span class="badge">5</span>
+      </a>
+      <a href="#" class="nav-link">
+        <i class='bx bxs-message-square-dots icon'></i>
+        <span class="badge">8</span>
+      </a>
+      <span class="divider"></span>
+      <div class="profile">
+        <img
+          src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+          alt="">
+        <ul class="profile-link">
+          <li><a href="#"><i class='bx bxs-user-circle icon'></i> Profile</a></li>
+          <li><a href="#"><i class='bx bxs-cog'></i> Settings</a></li>
+          <li><a href="#"><i class='bx bxs-log-out-circle'></i> Logout</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- NAVBAR -->
 
-	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-	<script src="admin-layout.component.js"></script>
+    <!-- MAIN -->
+    <main>
+      <h1 class="title">Dashboard</h1>
+      <ul class="breadcrumbs">
+        <li><a href="#">Home</a></li>
+        <li class="divider">/</li>
+        <li><a href="#" class="active">Dashboard</a></li>
+      </ul>
+      <router-outlet />
+    </main>
+    <!-- MAIN -->
+  </section>
+  <!-- NAVBAR -->
+
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  <script src="admin-layout.component.js"></script>
 </body>
+
 </html>
