--- a/FE-Framework1/src/app/Pages/Admin/Category/Add-category/add-category/add-category.component.html
+++ b/FE-Framework1/src/app/Pages/Admin/Category/Add-category/add-category/add-category.component.html
@@ -1,1 +1,11 @@
-<p>add-category works!</p>
+<div class="container">
+  <h1>Thêm danh mục</h1>
+  <form (ngSubmit)=" onHandleSubmit()">
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Tên danh mục</label>
+      <input type="text" class="form-control" id="exampleFormControlInput1" [(ngModel)]="categories.Name" name="Name">
+    </div>
+    {{categories|json}}
+    <button type="submit" ngClass="btn btn-primary">Thêm</button>
+  </form>
+</div>
