--- a/FE-Framework1/src/app/Pages/Admin/Admin-Category/admin-category/admin-category.component.html
+++ b/FE-Framework1/src/app/Pages/Admin/Admin-Category/admin-category/admin-category.component.html
@@ -16,7 +16,10 @@
         <td>{{i+1}}</td>
         <td>{{cate.Name}}</td>
         <td>
-          <!-- <button class="btn btn-primary" (click)="Remove(cate._id)">Xóa</button> -->
+
+
+
+          <button class="btn btn-primary" (click)="Remove(cate.id)">Xóa</button>
         </td>
       </tr>
     </tbody>
