--- a/FE-Framework1/src/app/Pages/Admin/Course/update-course/update-course.component.html
+++ b/FE-Framework1/src/app/Pages/Admin/Course/update-course/update-course.component.html
@@ -23,7 +23,7 @@
                 <!-- <option>...</option> -->
             </select>
         </div>
-        {{course | json}}
-        <button class="btn btn-primary">UPdate Course</button>
+        <!-- {{course | json}} -->
+        <button class="btn btn-primary">Update Course</button>
     </form>
 </div>
