feat: Remove sourse refs: AAF-30

--- a/FE-Framework1/src/app/Pages/Admin/Course/course/course.component.html
+++ b/FE-Framework1/src/app/Pages/Admin/Course/course/course.component.html
@@ -1,6 +1,6 @@
 <div class="container-admin">
     <h1>{{title}}</h1>
-    <div class="row">
+    <div class="row p-auto ">
         <div class="col-3 "><a routerLink="add">Thêm khóa học</a></div>
         <div class="col-9">
             <input type="text" placeholder="Search..." [(ngModel)]="searchValue" class="form-control">
