--- a/FE-Framework1/src/app/Client/home-page/home-page.component.html
+++ b/FE-Framework1/src/app/Client/home-page/home-page.component.html
@@ -145,23 +145,23 @@
         <h2></h2>
         <div class="row">
             <div class="col col-md-3">
-                <div class="card-sl">
+                <div class="card-sl" *ngFor="let product of course">
                     <div class="card-image">
                         <img
-                            src="https://images.pexels.com/photos/1149831/pexels-photo-1149831.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+                            src="{{product.Image}}" />
                     </div>
     
                     <a class="card-action" href="#"><i class="fa fa-heart"></i></a>
                     <div class="card-heading">
-                        Audi Q8
+                        {{product.Name}}
                     </div>
                     <div class="card-text">
-                        Audi Q8 is a full-size luxury crossover SUV coupé made by Audi that was launched in 2018.
+                        {{product.Description}}
                     </div>
                     <div class="card-text">
-                        $67,400
+                        $ {{product.Price}}
                     </div>
-                    <a href="#" class="card-button"> Purchase</a>
+                    <a href="#" class="card-button">Mua khóa học</a>
                 </div>
             </div>     
         </div>
