feat: creat ui detail product refs: AAF-46

--- a/FE-Framework1/src/app/Client/course-detail/course-detail.component.html
+++ b/FE-Framework1/src/app/Client/course-detail/course-detail.component.html
@@ -50,6 +50,23 @@
     </div>
   </nav>
 
+  <h2 class="all__product">Product Detail</h2>
+<div class="container">
+    <div class="product-detail">
+        <div class="banner-left">
+            <h2 class="name">{{product.Name}}</h2>
+            <p id="money">${{product.Price}}</p>
+            <p id="Pellentesque">{{product.Description}}</p>
+            <a href="">
+                <button>Add To Course</button>
+            </a>
+        </div>
+        <div class="img">
+            <img src="{{product.Image}}" alt="">
+        </div>
+    </div>
+</div>
+
   <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted mt-5">
     <!-- Section: Social media -->
