--- a/FE-Framework1/src/app/Client/home-page/home-page.component.html
+++ b/FE-Framework1/src/app/Client/home-page/home-page.component.html
@@ -183,13 +183,13 @@
       <!-- Right -->
       <div>
         <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
+          <i class="fa-brands fa-facebook"></i>
         </a>
         <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
+          <i class="fa-brands fa-twitter"></i>
         </a>
         <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
+          <i class="fa-brands fa-google"></i>
         </a>
         <a href="" class="me-4 text-reset">
           <i class="fab fa-instagram"></i>
