--- a/FE-Framework1/src/app/Pages/Course/list-course/list-course.component.html
+++ b/FE-Framework1/src/app/Pages/Course/list-course/list-course.component.html
@@ -16,16 +16,16 @@
                     <div class="question">Have any questions?</div>
                   </li>
                   <li>
-                    <div>19001668</div>
+                    <div>19006868</div>
                   </li>
                   <li>
-                    <div>cskh@unica.vn</div>
+                    <div>cshk@unica.com</div>
                   </li>
                 </ul>
                 <div class="top_bar_login ml-auto">
                   <ul>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a routerLink="/signup">Register</a></li>
+                    <li><a routerLink="/signin">Login</a></li>
                   </ul>
                 </div>
               </div>
@@ -44,18 +44,18 @@
               <div class="logo_container">
                 <a href="#">
                   <div class="logo_content d-flex flex-row align-items-end justify-content-start">
-                    <div class="logo_img"><img src="../../../../assets/Images/Contact/logo.png" alt=""></div>
+                    <div class="logo_img"><img src="../../../../assets/Images/HomePage/logo.png" alt=""></div>
                     <div class="logo_text">learn</div>
                   </div>
                 </a>
               </div>
               <nav class="main_nav_contaner ml-auto">
                 <ul class="main_nav">
-                  <li><a href="index.html">home</a></li>
-                  <li><a href="about.html">about us</a></li>
-                  <li><a href="courses.html">courses</a></li>
-                  <li><a href="news.html">news</a></li>
-                  <li class="active"><a href="contact.html">contact</a></li>
+                  <li><a routerLink="/home">home</a></li>
+                  <!-- <li><a href="about.html">about us</a></li> -->
+                  <li class="active"><a routerLink="course">courses</a></li>
+                  <li><a routerLink="/about">About</a></li>
+                  <li><a routerLink="/contact">contact</a></li>
                 </ul>
                 <div class="search_button"><i class="fa fa-search" aria-hidden="true"></i></div>
 
@@ -109,13 +109,13 @@
       </form>
     </div>
     <nav class="menu_nav">
-      <ul class="menu_mm">
-        <li class="menu_mm"><a href="index.html">Home</a></li>
-        <li class="menu_mm"><a href="courses.html">Courses</a></li>
-        <li class="menu_mm"><a href="instructors.html">Instructors</a></li>
-        <li class="menu_mm"><a href="#">Events</a></li>
-        <li class="menu_mm"><a href="blog.html">Blog</a></li>
-        <li class="menu_mm"><a href="contact.html">Contact</a></li>
+      <ul>
+        <li class="menu_mm"><a routerLink="home">Home</a></li>
+        <li class="menu_mm"><a routerLink="course">Courses</a></li>
+        <li class="menu_mm"><a routerLink="about">About</a></li>
+        <li class="menu_mm"><a routerLink="contact">contact</a></li>
+        <!-- <li class="menu_mm"><a href="blog.html">Blog</a></li>
+        <li class="menu_mm"><a href="contact.html">Contact</a></li> -->
       </ul>
     </nav>
     <div class="menu_extra">
@@ -137,19 +137,19 @@
   <div class="home">
     <!-- Background image artist https://unsplash.com/@thepootphotographer -->
     <div class="home_background parallax_background parallax-window" data-parallax="scroll"
-      data-image-src="../../../../assets/Images/Contact/contact.jpg" data-speed="0.8">
-      <img src="../../../../assets/Images/Contact/contact.jpg" alt="">
+      data-image-src="images/courses.jpg" data-speed="0.8">
+      <img src="../../../../assets/Images/HomePage/courses.jpg" alt="">
     </div>
     <div class="home_container">
       <div class="container">
         <div class="row">
           <div class="col">
             <div class="home_content text-center">
-              <div class="home_title">Contact</div>
+              <div class="home_title">Courses </div>
               <div class="breadcrumbs">
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li>Contact</li>
+                  <li>Cousers</li>
                 </ul>
               </div>
             </div>
@@ -159,90 +159,108 @@
     </div>
   </div>
 
-  <!-- Contact -->
+  <!-- Courses -->
 
-  <div class="contact">
-    <div class="container-fluid">
-      <div class="row row-xl-eq-height">
-        <!-- Contact Content -->
-        <div class="col-xl-6">
-          <div class="contact_content">
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="contact_about">
-                  <div class="logo_container">
-                    <a href="#">
-                      <div class="logo_content d-flex flex-row align-items-end justify-content-start">
-                        <div class="logo_img"><img src="../../../../assets/Images/Contact/logo.png" alt=""></div>
-                        <div class="logo_text">learn</div>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="contact_about_text">
-                    <p>Giờ đây học viên có thể học trực tuyến các bài học của hệ thống Unica mà không cần tới máy
-                      tính, vì chỉ với một chiếc smartphone học viên vẫn có thể học được các khoá học một cách thuận
-                      tiện nhất với mọi chức năng tương tự trên web.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="contact_info_container">
-                  <div class="contact_info_main_title">Contact Us</div>
-                  <div class="contact_info">
-                    <div class="contact_info_item">
-                      <div class="contact_info_title">Address:</div>
-                      <div class="contact_info_line">1481 Creekside Lane Avila Beach, CA 93424</div>
-                    </div>
-                    <div class="contact_info_item">
-                      <div class="contact_info_title">Phone:</div>
-                      <div class="contact_info_line">+53 345 7953 32453</div>
-                    </div>
-                    <div class="contact_info_item">
-                      <div class="contact_info_title">Email:</div>
-                      <div class="contact_info_line">yourmail@gmail.com</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="contact_form_container">
-              <form action="#" id="contact_form" class="contact_form">
-                <div>
-                  <div class="row">
-                    <div class="col-lg-6 contact_name_col">
-                      <input type="text" class="contact_input" placeholder="Name" required="required">
-                    </div>
-                    <div class="col-lg-6">
-                      <input type="email" class="contact_input" placeholder="E-mail" required="required">
-                    </div>
-                  </div>
-                </div>
-                <div><input type="text" class="contact_input" placeholder="Subject" required="required"></div>
-                <div><textarea class="contact_input contact_textarea" placeholder="Message"></textarea></div>
-                <button class="contact_button"><span>send message</span><span class="button_arrow"><i
-                      class="fa fa-angle-right" aria-hidden="true"></i></span></button>
-              </form>
-            </div>
+  <div class="courses">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 offset-lg-1">
+          <div class="section_title text-center">
+            <h2>Choose your course</h2>
           </div>
+          <div class="section_subtitle">Suspendisse tincidunt magna eget massa hendrerit efficitur. Ut euismod
+            pellentesque imperdiet. Cras laoreet gravida lectus, at viverra lorem venenatis in. Aenean id varius quam.
+            Nullam bibendum interdum dui, ac tempor lorem convallis ut</div>
         </div>
+      </div>
 
-        <!-- Contact Map -->
-        <div class="col-xl-6 map_col">
-          <div class="contact_map">
-
-            <!-- Google Map -->
-            <div id="google_map" class="google_map">
-              <div class="map_container">
-                <div id="map"></div>
-              </div>
-            </div>
-
+      <!-- Course Search -->
+      <div class="row">
+        <div class="col">
+          <div class="course_search">
+            <form action="#"
+              class="course_search_form d-flex flex-md-row flex-column align-items-start justify-content-between">
+              <div><input type="text" class="course_input" placeholder="Course" required="required"></div>
+              <div><input type="text" class="course_input" placeholder="Level" required="required"></div>
+              <button class="course_button"><span>search course</span><span class="button_arrow"><i
+                    class="fa fa-angle-right" aria-hidden="true"></i></span></button>
+            </form>
           </div>
         </div>
       </div>
 
+      <!-- Featured Course -->
+      <div class="row featured_row">
+        <div class="col-lg-6 featured_col">
+          <div class="featured_content">
+            <div class="featured_header d-flex flex-row align-items-center justify-content-start">
+              <div class="featured_tag"><a href="#">Featured</a></div>
+              <div class="featured_price ml-auto">Price: <span>$35</span></div>
+            </div>
+            <div class="featured_title">
+              <h3><a href="courses.html">Online Literature Course</a></h3>
+            </div>
+            <div class="featured_text">Maecenas rutrum viverra sapien sed fermentum. Morbi tempor odio eget lacus tempus
+              pulvinar. Donec vehicula efficitur nibh, in pretium nulla interdum lacus vehicula efficitur nibh, in
+              pretiumvehicula efficitur nibh, in pretium tempus non.</div>
+            <div class="featured_footer d-flex align-items-center justify-content-start">
+              <div class="featured_author_image"><img src="images/featured_author.jpg" alt="">
+                <img src="../../../../assets/Images/HomePage/featured_author.jpg" alt="">
+              </div>
+              <div class="featured_author_name">By <a href="#">James S. Morrison</a></div>
+              <div class="featured_sales ml-auto"><span>352</span> Sales</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 featured_col">
+          <!-- Background image artist https://unsplash.com/@jtylernix -->
+          <div class="featured_background" style="background-image:url(images/featured.jpg)">
+            <img src="../../../../assets/Images/HomePage/about_1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="row courses_row">
+
+        <!-- Course -->
+        <div class="col-lg-4 col-md-6 h-500" *ngFor=" let course of courses">
+          <div class="course ">
+            <div class="course_image"><img src="../../../../assets/Images/HomePage/course_8.jpg" alt=""></div>
+            <div class="course_body">
+              <div class="course_header d-flex flex-row align-items-center justify-content-start">
+                <div class=" course_tag"><a href="#">Featured</a></div>
+                <div class="course_price ml-auto">Price: <span>${{course.Price}}</span></div>
+              </div>
+              <div class="course_title">
+                <h3><a href="courses.html">{{course.Name}}</a></h3>
+              </div>
+              <div class="course_text">{{course.Description}}</div>
+              <div class="course_footer d-flex align-items-center justify-content-start">
+                <div class="course_author_image"><img src="../../../../assets/Images/HomePage/featured_author.jpg"
+                    alt="https://unsplash.com/@anthonytran"></div>
+                <div class="course_author_name">By <a href="#">James S. Morrison</a></div>
+                <div class="course_sales ml-auto"><span>352</span> Sales</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Pagination -->
+      <div class="row">
+        <div class="col">
+          <div class="courses_paginations">
+            <ul>
+              <li class="active"><a href="#">01</a></li>
+              <li><a href="#">02</a></li>
+              <li><a href="#">03</a></li>
+              <li><a href="#">04</a></li>
+              <li><a href="#">05</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
 
   <!-- Footer -->
 
@@ -271,6 +289,8 @@
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
               </ul>
+            </div>
+            <div class="copyright">
             </div>
           </div>
         </div>
@@ -309,15 +329,15 @@
             <div class="footer_contact_info">
               <div class="footer_contact_item">
                 <div class="footer_contact_title">Address:</div>
-                <div class="footer_contact_line">150 Cầu Giấy-Hà Nội</div>
+                <div class="footer_contact_line">1481 Creekside Lane Avila Beach, CA 93424</div>
               </div>
               <div class="footer_contact_item">
                 <div class="footer_contact_title">Phone:</div>
-                <div class="footer_contact_line">19001568</div>
+                <div class="footer_contact_line">+53 345 7953 32453</div>
               </div>
               <div class="footer_contact_item">
                 <div class="footer_contact_title">Email:</div>
-                <div class="footer_contact_line">cskh@unica.vn</div>
+                <div class="footer_contact_line">yourmail@gmail.com</div>
               </div>
             </div>
           </div>
@@ -326,11 +346,3 @@
     </div>
   </footer>
 </div>
-<!--
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="styles/bootstrap4/popper.js"></script>
-  <script src="styles/bootstrap4/bootstrap.min.js"></script>
-  <script src="plugins/easing/easing.js"></script>
-  <script src="plugins/parallax-js-master/parallax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
-  <script src="js/contact.js"></script> -->
