feat: Kết nối BE

--- a/FE-Framework1/src/app/Pages/Admin/Course/add-course/add-course.component.html
+++ b/FE-Framework1/src/app/Pages/Admin/Course/add-course/add-course.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<h1 style="text-align: center;">Add Course</h1>
+<div class="container border mx-auto mt-5 m p-5" style="width: 500px;">
     <form (ngSubmit)="onHandleSubmit()" >
         <div class="mb-3">
             <label for="">Name</label>
