--- a/FE-Framework1/src/app/Pages/Admin/Course/course/course.component.html
+++ b/FE-Framework1/src/app/Pages/Admin/Course/course/course.component.html
@@ -1,8 +1,8 @@
 <div class="container-admin">
-    <h1>{{title}}</h1>
-    <div class="row p-auto ">
+    <h1 style="text-align: center;">{{title}}</h1>
+    <div class="row mx-auto ">
         <div class="col-3 "><a routerLink="add">Thêm khóa học</a></div>
-        <div class="col-9">
+        <div class="col-8" style="width: 500px; float: right;">
             <input type="text" placeholder="Search..." [(ngModel)]="searchValue" class="form-control">
         </div>
     </div>
