--- a/FE-Framework1/src/app/Layouts/admin-layout/admin-layout.component.html
+++ b/FE-Framework1/src/app/Layouts/admin-layout/admin-layout.component.html
@@ -95,12 +95,12 @@
 
     <!-- MAIN -->
     <main>
-      <h1 class="title">Dashboard</h1>
+      <!-- <h1 class="title">Dashboard</h1>
       <ul class="breadcrumbs">
         <li><a href="#">Home</a></li>
         <li class="divider">/</li>
         <li><a href="#" class="active">Dashboard</a></li>
-      </ul>
+      </ul> -->
       {{valueInput}}
       <router-outlet />
       
